# mlrs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPIKE-FINDINGS.md
crates/mlrs-algos/: Cargo.toml
crates/mlrs-algos/src/: error.rs  lib.rs  traits.rs  typestate.rs
crates/mlrs-algos/src/cluster/: agglomerative.rs  dbscan.rs  hdbscan.rs  kmeans.rs  mod.rs  spectral.rs  spectral_clustering.rs  spectral_embedding.rs
crates/mlrs-algos/src/covariance/: empirical_covariance.rs  ledoit_wolf.rs  mod.rs
crates/mlrs-algos/src/decomposition/: incremental_pca.rs  mod.rs  pca.rs  truncated_svd.rs
crates/mlrs-algos/src/density/: kernel_density.rs  mod.rs
crates/mlrs-algos/src/ensemble/: forest_inference.rs  hist_gradient_boosting_classifier.rs  hist_gradient_boosting_regressor.rs  mod.rs  random_forest_classifier.rs  random_forest_regressor.rs  tree_shap.rs
crates/mlrs-algos/src/kernel_ridge/: kernel_ridge.rs  mod.rs
crates/mlrs-algos/src/linear/: coordinate_descent.rs  elastic_net.rs  lasso.rs  linear_regression.rs  linear_svc.rs  linear_svr.rs  logistic.rs  mbsgd_classifier.rs  mbsgd_regressor.rs  mod.rs  ridge.rs  sgd_config.rs
crates/mlrs-algos/src/manifold/: mod.rs  tsne.rs  umap.rs  umap_init.rs  umap_internals.rs
crates/mlrs-algos/src/metrics/: classification.rs  mod.rs  regression.rs
crates/mlrs-algos/src/naive_bayes/: bernoulli_nb.rs  categorical_nb.rs  complement_nb.rs  gaussian_nb.rs  mod.rs  multinomial_nb.rs  nb_common.rs
crates/mlrs-algos/src/neighbors/: classifier.rs  mod.rs  nearest.rs  regressor.rs
crates/mlrs-algos/src/projection/: gaussian.rs  mod.rs  sparse.rs
crates/mlrs-algos/src/timeseries/: arima.rs  mod.rs
crates/mlrs-algos/tests/: agglomerative_test.rs  arima_test.rs  bernoulli_nb_test.rs  categorical_nb_test.rs  compile_fail.rs  complement_nb_test.rs  dbscan_test.rs  elastic_net_test.rs  empirical_covariance_test.rs  fil_test.rs  gaussian_nb_test.rs  hdbscan_test.rs  hist_gradient_boosting_classifier_test.rs  hist_gradient_boosting_perf_test.rs  hist_gradient_boosting_regressor_test.rs  incremental_pca_test.rs  kernel_density_test.rs  kernel_ridge_test.rs  kmeans_perf_test.rs  kmeans_test.rs  knn_classifier_test.rs  knn_regressor_test.rs  lasso_test.rs  ledoit_wolf_test.rs  linear_regression_perf_test.rs  linear_regression_test.rs  linear_svc_test.rs  linear_svr_test.rs  logistic_test.rs  mbsgd_classifier_test.rs  mbsgd_regressor_test.rs  metrics_classification_test.rs  metrics_fixtures_exist_test.rs  metrics_infra_test.rs  metrics_regression_test.rs  multinomial_nb_test.rs  nb_common_test.rs  nearest_neighbors_test.rs  pca_test.rs  random_forest_classifier_test.rs  (+13 more)
crates/mlrs-algos/tests/ui/: predict_before_fit.rs  predict_before_fit.stderr  transform_before_fit.rs  transform_before_fit.stderr
crates/mlrs-backend/: Cargo.toml
crates/mlrs-backend/src/: bridge.rs  capability.rs  device_array.rs  lib.rs  pool.rs  runtime.rs
crates/mlrs-backend/src/prims/: center.rs  cholesky.rs  coordinate_descent.rs  covariance.rs  dbscan.rs  distance.rs  eig.rs  gemm.rs  gram.rs  hist_gradient_boosting.rs  incremental_svd.rs  kernel_matrix.rs  kmeans.rs  knn_graph.rs  laplacian.rs  lbfgs.rs  linear_predict.rs  mod.rs  mutual_reachability.rs  random_forest.rs  reduce.rs  rng.rs  sgd.rs  svd.rs  topk.rs  tsne.rs
crates/mlrs-backend/tests/: bridge_test.rs  capability_test.rs  cd_test.rs  center_test.rs  cholesky_test.rs  covariance_test.rs  dbscan_mask_test.rs  distance_test.rs  eig_test.rs  gemm_test.rs  gram_test.rs  hist_gradient_boosting_test.rs  incremental_svd_test.rs  kernel_matrix_test.rs  kmeanspp_test.rs  knn_graph_test.rs  laplacian_test.rs  lbfgs_test.rs  linear_predict_test.rs  lloyd_test.rs  memory_gate_test.rs  mutual_reachability_test.rs  pipeline_test.rs  pool_test.rs  random_forest_feature_importances_test.rs  random_forest_oob_test.rs  random_forest_test.rs  reduce_test.rs  rng_test.rs  self_drop_gather_test.rs  sgd_test.rs  spike_test.rs  svd_test.rs  topk_test.rs  tree_bench.rs  tree_witness.rs  tsne_test.rs  umap_layout_test.rs
crates/mlrs-backend/tests/tree_spike/: mod.rs
crates/mlrs-core/: Cargo.toml
crates/mlrs-core/examples/: gen_fixture.rs
crates/mlrs-core/src/: compare.rs  error.rs  float_cast.rs  label_perm.rs  lib.rs  oracle.rs  sign_flip.rs  tolerance.rs
crates/mlrs-core/tests/: compare_test.rs  helpers_test.rs
crates/mlrs-core/tests/fixtures/: oracle_case.npz
crates/mlrs-kernels/: Cargo.toml
crates/mlrs-kernels/src/: cholesky.rs  colmean.rs  coordinate.rs  dbscan.rs  distance.rs  elementwise.rs  gbt.rs  gram.rs  jacobi_eig.rs  jacobi_svd.rs  kmeans.rs  lbfgs.rs  lib.rs  linear_predict.rs  mutual_reachability.rs  reduce.rs  sgd.rs  smoke.rs  topk.rs  tree.rs  tsne.rs  umap_layout.rs
crates/mlrs-py/: Cargo.toml
crates/mlrs-py/pyproject/: cpu.pyproject.toml  cuda.pyproject.toml  rocm.pyproject.toml  wgpu.pyproject.toml
crates/mlrs-py/python/mlrs/: .gitignore  __init__.py  _io.py  base.py  cluster.py  covariance.py  decomposition.py  density.py  ensemble.py  kernel_ridge.py  linear.py  manifold.py  metrics.py  naive_bayes.py  neighbors.py  random_projection.py  timeseries.py
crates/mlrs-py/python/tests/: _wheel_build.py  checks_triage.md  conftest.py  test_dtype.py  test_egress_shape_regression.py  test_estimator_checks.py  test_import_probe.py  test_io.py  test_oracle_arima.py  test_oracle_cluster.py  test_oracle_decomposition.py  test_oracle_ensemble.py  test_oracle_fil.py  test_oracle_linear.py  test_oracle_manifold.py  test_oracle_metrics.py  test_oracle_neighbors.py  test_params.py  test_shims.py  test_wheels.py
crates/mlrs-py/src/: allocator.rs  arrow_symbol_probe.rs  capability.rs  dispatch.rs  egress.rs  errors.rs  ingress.rs  lib.rs  metrics.rs
crates/mlrs-py/src/estimators/: cluster.rs  covariance.rs  ensemble.rs  (+10 more)
crates/mlrs-py/tests/: allocator_test.rs  ingress_test.rs  manifold_test.rs  probe_test.rs  pyclass_smoke_test.rs  random_forest_smoke_test.rs  sgd_smoke_test.rs  spectral_smoke_test.rs  test_kernel.py  test_metrics.py  test_naive_bayes.py  test_random_forest.py  test_sgd.py
(+643 files in other folders)
