[workspace]
resolver = "2"
members = [
    "crates/mlrs-core",
    "crates/mlrs-kernels",
    "crates/mlrs-backend",
    "crates/mlrs-algos",
    "crates/mlrs-py",
]

# Single source of truth for shared dependency versions (D-10: track latest).
# Verified latest on crates.io 2026-06-11 via `cargo search`.
[workspace.dependencies]
# CubeCL: device-kernel layer. default-features=false so the feature-free
# `mlrs-kernels` crate never pulls a backend runtime (Criterion 1 / Pitfall 5).
cubecl = { version = "0.10.0", default-features = false }

# Apache Arrow zero-copy interchange (mandated by CLAUDE.md).
arrow = "59"

# PyO3 binding layer for the Python wheels (Phase 6).
# PINNED to 0.28 (NOT the latest 0.29) — this is the ONE dep that overrides the
# "track latest" workspace policy above. arrow-59's `pyarrow` feature transitively
# pins pyo3 0.28.x, and only ONE pyo3 ABI may link into the `mlrs-py` cdylib;
# mixing 0.28 + 0.29 links two PyInit ABIs and crashes the wheel at import
# (D-09 / PY-05; RESEARCH 06 Pitfall 1). default-features=false: the
# `extension-module` + `abi3-py312` features are selected per-crate in mlrs-py.
pyo3 = { version = "0.28", default-features = false }

# Safe zero-copy &[T] <-> &[u8] transmutation for the Arrow -> CubeCL handoff.
bytemuck = { version = "1", features = ["derive"] }

# Typed error enums in library crates (D-07 / D-10).
thiserror = "2"

# Boundary error handling in mlrs-py and scripts-driven Rust (D-10).
anyhow = "1"

# Custom global allocator, wired only in mlrs-py (FOUND-09).
# `local_dynamic_tls`: mimalloc's bundled C library defaults to the initial-exec
# TLS model, which reserves a slot in the executable's STATIC TLS block. A wheel
# is `dlopen`'d into an already-running CPython, whose static TLS block is
# exhausted, so an initial-exec extension fails to import with
# `cannot allocate memory in static TLS block` (Plan 06-05 flagged this — the
# editable `.so` needed `LD_PRELOAD`). Building mimalloc with the
# local-dynamic TLS model makes the allocator `dlopen`-safe, so every backend
# wheel `import mlrs` works WITHOUT any preload (packaging-layer fix, PY-04).
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

# .npz named-array reader for the oracle fixtures (D-02). npyz avoids the
# heavy `ndarray` dependency and reads into plain Vec<T>.
npyz = { version = "0.9", features = ["npz"] }

# Logging: dtype/backend selection (Criterion 4) and pool counters (D-05).
log = "0.4"
env_logger = "0.11"
