[package]
name = "mlrs-algos"
version = "0.1.0"
edition = "2021"
description = "sklearn-compatible ML estimators for mlrs (Phase 4: LinearRegression, Ridge, PCA, TruncatedSVD)."

[dependencies]
mlrs-core = { path = "../mlrs-core" }
mlrs-backend = { path = "../mlrs-backend" }
# Feature-free generic CubeCL kernels (KERNEL-02): KernelDensity launches the six
# density-value maps + the div_by_row log-sum-exp rescale helper from
# mlrs-kernels::elementwise directly over the v1 distance base (D-08 — KD does NOT
# route through kernel_matrix). mlrs-kernels never pulls a backend runtime
# (Criterion 1); the concrete ActiveRuntime comes through mlrs-backend.
mlrs-kernels = { path = "../mlrs-kernels" }
# CubeCL: device-element trait surface (`Float` / `CubeElement`) the estimators
# are generic over (D-08). default-features=false so this crate never pulls a
# backend runtime — the active backend is selected through the `mlrs-backend`
# feature passthrough below (mlrs-backend OWNS `ActiveRuntime`).
cubecl = { workspace = true }
# Safe host<->device element bridging (`bytemuck::Pod` bound, D-08) for the
# materialize-at-accessor path (D-03).
bytemuck = { workspace = true }
thiserror = { workspace = true }
# Host-side structured warnings — the D-06 `force_alpha` clip emits a sklearn-
# parity warning when a too-small `alpha` is clipped to 1e-10 (the mlrs-backend
# reduce prim uses the same `log::warn!` convention). Parity depends only on the
# clipped numeric, not the warning text (Phase-11 A2).
log = { workspace = true }

[dev-dependencies]
# Oracle harness (`load_npz`, `OracleCase`) + tolerance/sign-flip helpers the
# estimator tests consume. Reachable through the main `mlrs-core` dep, but named
# here so the test target is explicit about its oracle dependency.
mlrs-core = { path = "../mlrs-core" }
env_logger = { workspace = true }
# Compile-fail test harness (D-11) for the Wave-3 typestate gate that asserts a
# predict-before-fit does NOT compile. dtolnay crate (same author as the
# workspace `thiserror`/`syn`), legitimacy-audited in RESEARCH § Package
# Legitimacy Audit; dev-only, no build.rs/postinstall.
trybuild = "1.0.117"

# Backend selection passthrough. `mlrs-algos` owns NO runtime of its own; each
# feature forwards to the matching `mlrs-backend` feature so `--features cpu`/
# `--features rocm`/`--features wgpu`/`--features cuda` propagate to the backend
# that resolves the concrete `ActiveRuntime` (mirrors the backend's own feature
# block; D-07 gate = cpu(f64) + rocm(f32)). default-features stay off on the
# workspace cubecl pin (Security V12) — only these feature lines switch runtimes.
[features]
cpu = ["mlrs-backend/cpu"]
wgpu = ["mlrs-backend/wgpu"]
cuda = ["mlrs-backend/cuda"]
rocm = ["mlrs-backend/rocm"]
