[package]
name = "mlrs-backend"
version = "0.1.0"
edition = "2021"
description = "Runtime selection, capability gating, Arrow bridge, device arrays, and buffer pool for mlrs."

[dependencies]
mlrs-core = { path = "../mlrs-core" }
mlrs-kernels = { path = "../mlrs-kernels" }
cubecl = { workspace = true }
arrow = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

# This crate OWNS backend selection (FOUND-03 / Criterion 1). Exactly one of
# these features must be active. Each forwards to the matching `cubecl` runtime
# feature so the concrete `ActiveRuntime` resolves in `runtime.rs`.
[features]
cpu = ["cubecl/cpu"]
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]
rocm = ["cubecl/rocm"]
