[package]
name = "mlrs-backend"
version = "0.1.0"
edition = "2021"
description = "Runtime selection, capability gating, Arrow bridge, device arrays, and buffer pool for mlrs."

[dependencies]
mlrs-core = { path = "../mlrs-core" }
mlrs-kernels = { path = "../mlrs-kernels" }
cubecl = { workspace = true }
arrow = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
# GEMM substrate (PRIM-01). cubek-matmul 0.2.0 is the cubecl-0.10-compatible
# matmul source (the abandoned cubecl-matmul/cubecl-linalg pin cubecl 0.9/0.5
# and cannot link). default-features=false so we never pull a conflicting
# default cubecl runtime — the active backend is selected by this crate's own
# cpu/wgpu/cuda/rocm features. Resolved by the Plan 02-01 Task-1 checkpoint.
cubek-matmul = { version = "0.2.0", default-features = false }

[dev-dependencies]
env_logger = { workspace = true }
# Spike-only: probe the npz reader API (A4). The real oracle loader lives in
# mlrs-core (Plan 02); this exercises npyz read+write end-to-end without numpy.
npyz = { workspace = true }

# This crate OWNS backend selection (FOUND-03 / Criterion 1). Exactly one of
# these features must be active. Each forwards to the matching `cubecl` runtime
# feature so the concrete `ActiveRuntime` resolves in `runtime.rs`.
[features]
cpu = ["cubecl/cpu"]
wgpu = ["cubecl/wgpu"]
cuda = ["cubecl/cuda"]
rocm = ["cubecl/rocm"]
