[package]
name = "mlrs-core"
version = "0.1.0"
edition = "2021"
description = "Host-side comparison helpers, tolerances, oracle fixture loader, and typed errors for mlrs."

[dependencies]
thiserror = { workspace = true }
npyz = { workspace = true }
log = { workspace = true }
# Safe host<->device float bit-reinterpret (`bytemuck::Pod` bound) for the
# shared `float_cast` helpers (IN-02); same workspace pin as the algo crates.
bytemuck = { workspace = true }
