[package]
name = "mlrs-py"
version = "0.1.0"
edition = "2021"
description = "PyO3 cdylib bindings for mlrs; owns the mimalloc global allocator."

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
mimalloc = { workspace = true }

# The dependency-free foundation crate — `BridgeError` lives here (D-07) and the
# boundary error→PyErr mapping in `errors.rs` matches on it directly.
mlrs-core = { path = "../mlrs-core" }

# `Pod` bound for the device→host egress generic; bytemuck adds no pyo3 ABI.
bytemuck = { workspace = true }

# PyO3 0.28 (single linked ABI, see workspace pin). `abi3-py312` gives ONE wheel
# covering Python >=3.12 (D-09). `extension-module` is NOT enabled here: it tells
# the linker the CPython symbols are provided by the host interpreter at import
# (so the wheel must NOT link libpython), which is correct for the maturin wheel
# build but breaks `cargo test` (the test binary then has undefined `PyExc_*` /
# `Py*` symbols at link). It is enabled instead via the crate's own
# `extension-module` feature, which the per-backend maturin templates turn on;
# `cargo test` leaves it off and links libpython through `pyo3/auto-initialize`
# (a dev-dependency), so the Rust integration tests run a real interpreter.
# `macros` enables `#[pyfunction]`/`#[pymodule]`/`wrap_pyfunction!` (off because
# the workspace pin sets `default-features = false` to keep `extension-module`
# out of the workspace-wide default). `abi3-py312` gives the single >=3.12 wheel.
pyo3 = { workspace = true, features = ["abi3-py312", "macros"] }

# Arrow with the `pyarrow` FFI feature — consumes the __arrow_c_array__ capsule
# from Python pyarrow arrays (D-02 ingress, wired in Plan 02). This is what
# transitively pins pyo3 to 0.28.
arrow = { workspace = true, features = ["pyarrow"] }

# The Rust core the wrappers dispatch into (Plans 02/03).
mlrs-algos = { path = "../mlrs-algos" }
mlrs-backend = { path = "../mlrs-backend" }

# Test-only: link a real CPython and initialize it so the Rust integration tests
# (`tests/ingress_test.rs`, `tests/probe_test.rs`) can build/run without the
# `extension-module` link mode. Not part of the wheel (maturin uses the lib, not
# the test harness). `auto-initialize` pulls in libpython at link + spins up the
# interpreter on first `Python::attach`.
[dev-dependencies]
pyo3 = { workspace = true, features = ["abi3-py312", "macros", "auto-initialize"] }
# Device-kernel trait bounds (`Float` / `CubeElement`) for the generic device
# fit/accessor smoke in `tests/spectral_smoke_test.rs`; default-features=false
# (the backend feature arrives through the mlrs-backend dependency chain).
cubecl = { workspace = true }
# Test-scoped logger init for the spectral device smoke (mirrors the algos tests).
env_logger = { workspace = true }

# Backend selection forwards to the sub-crate features; exactly one is chosen at
# wheel-build time via the per-backend pyproject `[tool.maturin].features`.
# Do NOT add the `numpy` Rust crate here — it would drag a second pyo3 ABI.
[features]
cpu = ["mlrs-backend/cpu", "mlrs-algos/cpu"]
wgpu = ["mlrs-backend/wgpu", "mlrs-algos/wgpu"]
cuda = ["mlrs-backend/cuda", "mlrs-algos/cuda"]
rocm = ["mlrs-backend/rocm", "mlrs-algos/rocm"]

# Wheel-only: tells PyO3 the CPython symbols come from the host interpreter at
# import (so the cdylib does NOT link libpython). The per-backend maturin
# templates add this to their `features` list; `cargo test`/`cargo build` leave
# it off so the binary can link libpython for the integration tests.
extension-module = ["pyo3/extension-module"]
